@@ -1,0 +1,7 @@
+[SubtitleEditor Extension]
+_Name=Spruce STL
+_Description=Spruce subtitles support.
+Categorie=subtitleformat
+Type=module
+Module=sprucestl
+Authors=kitone <kitone at gna dot org>
